correction de bug relatif à la methode 'getValue()' de la classe TimeSpinner